tests/cases/fail/list_index_out_of_range.cs
class Program {
    static void Main() {
        List<int> xs = new List<int>();
        xs.Add(1);
        Console.WriteLine(xs[5]);
    }
}
